0031024: Coding - invalid left shift in BVH_RadixSorter::Perform() using -fsanitize=undefined

Standard_Integer has been replaced by unsigned int for bit operations.